# Equitech

./: .breakpoints  .cache  .gitignore  README.md  account.py  accounts.py  app2.py  community.py  extentions.py  login.py  main.py  mongo.py  package-lock.json  pyproject.toml
.upm/: store.json
static/: schools.txt
static/css/: main.css  style.css  white.css  zoom.css
static/json/: courses.json  main.json  members.json  schoollogs.json  servers.json  share.json
templates/: 400.html  404.html  500.html  about.html  add.html  addquiz.html  aops.html  app.html  avatar.html  c_premium.html  calendar.html  cbotpremiumsignin.html  claim.html  cookies.html  courses.html  dashboard.html  disclaimer.html  edit.html  event.html  files.html  home.html  hybrid.html  index.html  inweb.html  join.html  layout.html  links.html  login.html  music.html  musicresults.html  musictrack.html  musicvideo.html  mycourse.html  myschool.html  pp.html  premium.html  profile.html  python.html  question.html  school.html  (+7 more)
templates/about/: index.html
templates/account/: advanced.html  appearance.html  community.html  connection.html  education.html  index.html  lang.html  logs.html  premium.html  security.html  text.html
templates/community/: index.html
templates/extentions/: index.html
templates/login/: index.html  new_password.html  password.html
templates/staff/: analytics.html  index.html  login_with_discord.html  testing.html
